<resources>
    <string name="app_name">movie_together</string>

    <string name="agora_app_id">b43d2fa9e170414096bb62da66dcc72f</string>

    <string name="agora_access_token">
        006b43d2fa9e170414096bb62da66dcc72fIADoRoaz7iGRTqLgyrhO18wYd0gHU99iQVlSoPOjjreRApKOrMwAAAAAEABc42rkPXuvYAEAAQA7e69g
    </string>

    <string name="face_license_id">
        HHQS-CLMN-PUGK-WGGM
    </string>

    <string-array name="encryption_mode_values">
        <item>AES-128-XTS</item>
        <item>AES-256-XTS</item>
    </string-array>


    <string-array name="string_array_resolutions">
        <item>160x120</item>
        // 120P
        <item>320x180</item>
        // 180P
        <item>320x240</item>
        // 240P the default one
        <item>640x360</item>
        // 360P
        <item>640x480</item>
        // 480P
        <item>1280x720</item>
        // 720P
    </string-array>

    <string-array name="string_array_frame_rate">
        <item>1</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        // the default one
        <item>24</item>
        <item>30</item>
    </string-array>

    <string-array name="string_array_bit_rate">
        <item>80</item>
        // 120P
        <item>160</item>
        // 180P
        <item>200</item>
        // 240P
        <item>400</item>
        // 360P
        <item>500</item>
        // 480P
        <item>1000</item>
        // 720P
    </string-array>

    <string name="legal_channel_name_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!#$%&amp;()+,-:;&lt;=.>?@[]^_`{|}~</string>

    <string name="label_settings">设置</string>

    <string name="msg_welcome_message">Welcome to Video Together</string>

    <string name="label_channel_name_hint">Channel name</string>

    <string name="label_encryption_key_hint">Encryption key</string>

    <string name="label_join">加入</string>

    <string name="label_do_network_test">网络测试</string>

    <string name="label_confirm">确认</string>

    <string name="label_send">发送</string>

    <string name="label_options">选项</string>
    <string name="label_network_testing">测试中…</string>
    <string name="label_network_testing_placeholder">-</string>
    <string name="label_network_test_result">测试结果</string>

    <string name="label_debug">是否显示消息列表</string>
    <string name="face_debug">是否记录表情信息</string>
    <string name="label_quality">Quality</string>
    <string name="label_rtt">RTT</string>
    <string name="label_uplink_packet_loss">Uplink Packet Loss</string>
    <string name="label_downlink_packet_loss">Downlink Packet Loss</string>

    <string name="msg_say_something">说点什么…</string>

    <string name="msg_connection_error">Connection error, please check the network settings or make sure channel name/access token are valid</string>

    <string name="label_title_resolution">分辨率</string>
    <string name="label_title_frame_rate">帧率(fps)</string>

    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>

</resources>