<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            style="@style/L1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_welcome_message" />

        <EditText
            android:id="@+id/channel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:digits="@string/legal_channel_name_characters"
            android:gravity="start|center_vertical"
            android:hint="@string/label_channel_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/encryption_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="20"
                android:digits="@string/legal_channel_name_characters"
                android:gravity="start|center_vertical"
                android:hint="@string/label_encryption_key_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/encryption_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                style="@style/L2Text"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="start|center_vertical"
                android:text="@string/label_title_resolution"
                android:textColor="#FF333333" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/settings_video_resolution"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="12dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                style="@style/L2Text"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="start|center_vertical"
                android:text="@string/label_title_frame_rate"
                android:textColor="#FF333333" />

            <View
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="20" />

            <Spinner
                android:id="@+id/settings_video_frame_rate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white">

            <TextView
                style="@style/L2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="#FF333333"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/label_debug" />

            <Switch
                android:id="@+id/debug_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:switchMinWidth="56dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white">

            <TextView
                style="@style/L2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="#FF333333"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/face_debug" />

            <Switch
                android:id="@+id/face_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:switchMinWidth="56dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_join"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/agora_blue"
            android:enabled="false"
            android:onClick="onClickJoin"
            android:text="@string/label_join"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp" />
    </LinearLayout>

</ScrollView>